# bitgrid.rs

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
benches/: core_benches.rs  morphology_benches.rs  visibility_benches.rs
src/: board.rs  bulk.rs  expand.rs  iter.rs  lib.rs  mask.rs  morphology.rs  ops.rs  query.rs
src/layout/: mod.rs  morton.rs  row_major.rs
